@@ -86,6 +86,11 @@ my @Tests =
      ['W92-2', "--date '1992-1-5' +%W", {OUT=>"00"}],
      ['W92-3', "--date '1992-1-6' +%W", {OUT=>"01"}],
 
+     ['q-1', "--date '1000-1-1' +%q", {OUT=>"1"}],
+     ['q-2', "--date '1000-4-1' +%q", {OUT=>"2"}],
+     ['q-3', "--date '1000-7-1' +%q", {OUT=>"3"}],
+     ['q-4', "--date '1000-10-1' +%q", {OUT=>"4"}],
+
      ['millen-1', "--date '1998-1-1 3 years' +%Y", {OUT=>"2001"}],
 
      ['rel-0', "-d '$d1 now' '+%Y-%m-%d %T'", {OUT=>"$d0 $t0"}],
