@@ -93,6 +93,8 @@ GNU coreutils NEWS                                    -*- outline -*-
   date now accepts the --debug option, to annotate the parsed date string,
   display timezone information, and warn about potential misuse.
 
+  date now accepts the %q format to output the quarter of the year.
+
 
 * Noteworthy changes in release 8.25 (2016-01-20) [stable]
 
